# ballast-ai

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
concepts/: index.html
concepts/01-agents/: index.html
concepts/02-tools/: index.html
concepts/03-structured-output/: index.html
concepts/04-dependencies-and-state/: index.html
concepts/05-grounded-references/: index.html
concepts/06-confidence-and-quality/: index.html
concepts/07-capabilities/: index.html
concepts/08-running-an-app/: index.html
concepts/09-persistence/: index.html
concepts/10-testing/: index.html
concepts/11-budget-and-loops/: index.html
concepts/12-drift-detection/: index.html
concepts/13-resilience/: index.html
concepts/14-patterns-intro/: index.html
concepts/15-reflection/: index.html
concepts/16-mapreduce/: index.html
concepts/17-divergent-convergent/: index.html
concepts/18-plan-and-execute/: index.html
concepts/19-cognitive-units/: index.html
concepts/20-composition/: index.html
concepts/21-human-in-the-loop/: index.html
concepts/22-observability/: index.html
concepts/23-evals/: index.html
concepts/24-durability/: index.html
concepts/25-custom-extensions/: index.html
docs/: README.md  index.md
docs/concepts/: 01-agents.md  02-tools.md  03-structured-output.md  04-dependencies-and-state.md  05-grounded-references.md  06-confidence-and-quality.md  07-capabilities.md  08-running-an-app.md  09-persistence.md  10-testing.md  11-budget-and-loops.md  12-drift-detection.md  13-resilience.md  14-patterns-intro.md  15-reflection.md  16-mapreduce.md  17-divergent-convergent.md  18-plan-and-execute.md  19-cognitive-units.md  20-composition.md  21-human-in-the-loop.md  22-observability.md  23-evals.md  24-durability.md  25-custom-extensions.md  README.md
docs/explanation/: README.md  architecture-overview.md  article-pain-points.md  customization-everywhere.md  why-ballast.md
docs/howto/: README.md  add-budget-guard.md  add-circuit-breaker-to-tool.md  add-confidence-to-tool-outputs.md  add-goal-drift-detector.md  add-logfire-tracing.md  auto-bridge-requires-approval.md  build-coala-unit.md  build-eval-dataset-from-traces.md  build-helper-agent-clarification.md  persist-approval-cards.md  run-llm-judge-evaluation.md  test-agents-with-testmodel.md  test-coala-units.md  test-workflows-with-dbos-fixture.md  use-divergent-convergent-for-brainstorm.md  use-mapreduce-for-rag.md  use-ref-to-prevent-id-hallucination.md  use-reflection-for-quality.md  wire-postgres-thread-repo.md
docs/reference/: README.md
docs/tutorial/: README.md
examples/notes-app/: KNOWN_BUGS.md  README.md  RETRO.md
examples/notes-app/backend/: .env.example  .gitignore  README.md  RETRO.md  alembic.ini  pyproject.toml
examples/notes-app/backend/src/notes_app/: __init__.py  agent.py  brainstorm_agents.py  brainstorm_flow.py  brainstorm_router.py  brainstorm_types.py  main.py  settings.py  streams.py  todo_approval_agent.py  todo_flow.py
examples/notes-app/backend/src/notes_app/agents/: __init__.py  brainstorm.py  note_refiner.py  notes.py  openrouter.py  openrouter_profile.py  todo_approval.py
examples/notes-app/backend/src/notes_app/alembic/: env.py
examples/notes-app/backend/src/notes_app/alembic/versions/: 0001_initial.py
examples/notes-app/backend/src/notes_app/coala/: research_summarize.py
examples/notes-app/backend/src/notes_app/memory/: semantic_sources.py
examples/notes-app/backend/src/notes_app/models/: __init__.py  brainstorm.py  note.py  progress.py  todo.py  todo_approval.py
examples/notes-app/backend/src/notes_app/notes/: __init__.py  domain.py  repository.py  routes.py  tools.py
examples/notes-app/backend/src/notes_app/repositories/: __init__.py  events.py  note.py  thread.py
examples/notes-app/backend/src/notes_app/routes/: __init__.py  notes.py  streaming.py  workflows.py
examples/notes-app/backend/src/notes_app/workflows/: __init__.py  brainstorm.py  brainstorm_events.py  create_note.py  todo_approval.py
examples/notes-app/backend/src/notes_app/workflows/brainstorm/: __init__.py  divergent.py  events.py  flow.py  prompts.py
examples/notes-app/backend/tests/: conftest.py  test_capabilities.py  test_create_note_approval.py  test_note_tools.py  test_notes_semantic.py  test_research_summarize.py  test_smoke.py  test_todo_proposal.py
explanation/: index.html
explanation/architecture-overview/: index.html
explanation/article-pain-points/: index.html
explanation/customization-everywhere/: index.html
explanation/why-ballast/: index.html
reference/: index.html
search/: search_index.json
src/ballast/: __init__.py  _alembic.py  alembic.ini  app.py  durable.py  errors.py  logging.py  settings.py
src/pydantic_ai_stateflow/: __init__.py  alembic.ini  durable.py  errors.py  logging.py  settings.py
tests/: conftest.py  test_errors.py  test_public_api_sp7.py  test_runtime_public.py  test_settings.py  test_testing_package.py
tests/_compat/: test_openai_assistant_content_shim.py
tests/api/: conftest.py  test_a2a_router.py  test_agent_runner_protocol.py  test_approvals_router.py  test_deps.py  test_engine_fastapi_app.py  test_error_middleware.py  test_health.py  test_message_parts.py  test_pydantic_ai_adapter.py  test_pydantic_ai_adapter_history.py  test_pydantic_ai_adapter_tool_calls.py  test_streaming_abort.py  test_streaming_ag_ui.py  test_streaming_persistence.py  test_streaming_router.py  test_streaming_vercel.py  test_threads_router.py  test_workflow_router.py
tests/app/: test_fastapi_app.py  test_with_approval_repo.py  test_with_memory.py  test_with_semantic_memory.py
tests/auth/: test_context.py  test_scope.py
tests/capabilities/: test_approval.py  test_as_critique.py  test_base.py  test_budget_guard.py  test_budget_snapshot.py  test_drift.py  test_embedder.py  test_grounded_retry.py  test_llm_judge.py  test_pii_guard.py  test_public_api.py  test_semantic_deduper.py  test_semantic_loop_detector.py  test_typed_loop_guard.py
tutorial/: index.html
(+662 files in other folders)
