[project]
name = "pydantic-ai-stateflow"
version = "0.1.0"
description = "Production-grade orchestration framework for Pydantic AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-ai>=0.0.13",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "dbos>=1.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "typer>=0.25.1",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "testcontainers[postgresql]>=4.7",
    "aiosqlite>=0.20",
]

[project.scripts]
stateflow = "pydantic_ai_stateflow.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pydantic_ai_stateflow"]
include = ["src/pydantic_ai_stateflow/alembic.ini"]

[tool.hatch.build.targets.wheel.force-include]
"src/pydantic_ai_stateflow/alembic" = "pydantic_ai_stateflow/alembic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "PT", "RET", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_explicit = false

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20260518",
]
