[project]
name = "ballast-ai"
version = "0.1.1"
description = "Production-grade orchestration framework for Pydantic AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kir Lastonoga", email = "lastonoga@gmail.com" }]
keywords = [
    "ai",
    "agents",
    "pydantic-ai",
    "pydantic-evals",
    "fastapi",
    "dbos",
    "workflow",
    "orchestration",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
]
dependencies = [
    "pydantic>=2.7",
    "pydantic-ai>=0.0.13",
    "pydantic-evals>=0.0.13",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "dbos>=1.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "typer>=0.25.1",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "testcontainers[postgresql]>=4.7",
    "aiosqlite>=0.20",
]

[project.urls]
Homepage = "https://github.com/lastonoga/ballast-ai"
Repository = "https://github.com/lastonoga/ballast-ai"
Issues = "https://github.com/lastonoga/ballast-ai/issues"

[project.scripts]
ballast = "ballast.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ballast"]
include = ["src/ballast/alembic.ini"]

[tool.hatch.build.targets.sdist]
# Strict whitelist: only the package + minimal rebuild metadata.
only-include = [
    "src/ballast",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "PT", "RET", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_explicit = false

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20260518",
]
